fixed horizontal scroll

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -387,7 +387,16 @@ main .section.deep-background h1 {
 @media screen and (min-width: 620px) {
     main .section.deep-background h1 {
         font-size: 60px;
-    }
+        margin-left: 40px;
+        margin-right: 40px;
+  }
+}
+
+@media screen and (min-width: 978px) {
+  main .section.deep-background h1 {
+      margin-left: 72px;
+      margin-right: 72px;
+}
 }
 
 @media screen and (max-width: 900px) {
